<resources>
    <string name="app_name">Mp3 Player</string>

    <string name="song">Song</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>

    <string name="tracks">Tracks: </string>
    <string name="albums">Albums: </string>

    <string name="search">Search</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="other">Other</string>
    <string name="setting">Setting</string>
    <string name="info">About</string>
</resources>
